[tool.poetry]
name = "tinybird-space"
version = "0.1.0"
description = ""
authors = ["Alex Gascón <alexgascon.93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.1.1"
requests = "^2.28.1"
pandas = "^1.5.1"
plotly = "^5.11.0"
dash = "^2.6.2"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
